fixed issue with alignment of title of the text in the how-we-work section of about us page

--- a/styles/HowWeWork.module.css
+++ b/styles/HowWeWork.module.css
@@ -39,6 +39,7 @@
   font-feature-settings: "ss03" on;
   color: #313131;
   letter-spacing: -0.045rem;
+  text-align: center;
 }
 .detail {
   font-family: "Satoshi";
